# Diseno_de_alto_nivel

./: .gitignore  README.md
Evaluacion_Corta_1/: TPU_Exposicion_MP6160.md
Evaluacion_Corta_2/: .gitignore  Declaración de Uso de Inteligencia Artificial  RAM.cpp  README  README.md  arch
Evaluacion_Corta_2/include/: Accelerator.h  Bus.h  RAM.h  Storage.h
Evaluacion_Corta_2/src/: Accelerator.cpp  Bus.cpp  CPU.cpp  SC_main.cpp  Storage.cpp  accelerator.cpp  accelerator.h  bus.h  cpu.h  ram.h  sc_main.cpp  storage.cpp  storage.h
Evaluacion_Corta_2/test/: Makefile
Evaluacion_Corta_2/test/archived/: sc_main_v1.cpp  sc_main_v2.cpp  sc_main_v3.cpp
Evaluacion_Corta_2/test/images/: output.raw
Evaluacion_Corta_2/test/scripts/: compare_raw.py  gen_raw.py  view_raw.py
Evaluacion_Corta_2/test/src/: .gitkeep  Accelerator.cpp  Bus.h  CPU.h  RAM.h  accelerator.cpp  cpu.h  sc_main.cpp  sc_main_v2.cpp  storage.cpp  storage.h
Projeto/riscv_gpgpu/docs/verification/: README.md
Projeto/riscv_gpgpu/models/systemc/compute_unit/: CMakeLists.txt
Projeto/riscv_gpgpu/models/systemc/memory/: memory_hierarchy.cpp
Projeto/riscv_gpgpu/models/systemc/scheduler/: warp_scheduler.cpp
Projeto/riscv_gpgpu/models/systemc/simt_controller/: simt_controller.cpp
Projeto/riscv_gpgpu/models/systemc/top/: top.cpp
Projeto/riscv_gpgpu/scripts/: benchmark.sh  collect_evidence.py
Projeto/riscv_gpgpu/scripts/benchmark/: analyze_results.py  run_benchmarks.sh
Projeto/riscv_gpgpu/scripts/scenarios/: README.md
Projeto/riscv_gpgpu/scripts/verify/: run_integration_tests.sh  run_unit_tests.sh
Projeto/riscv_gpgpu/software/common/: CMakeLists.txt  config_parser.py
Proyecto/docs/Papers/: Links.txt
Proyecto/docs/diagrams/: Overall_System_Architecture.puml  deployment.puml  diagramas_segundo_lvl.puml  flujo_ejecucion.puml  hls_method.puml  trazabilidad.puml
Proyecto/docs/diagrams/lvl_diagrams/: 2x2.puml  codesign.puml  deployment.puml  design_flow.puml  hardware_arch.puml  lvl0.puml  sequence.puml  soft_arch.puml  sys_arch.puml
Proyecto/riscv_gpgpu/: .gitignore  CMakeLists.txt  README.md
Proyecto/riscv_gpgpu/benchmarks/: CMakeLists.txt  README.md
Proyecto/riscv_gpgpu/benchmarks/configurations/: default_config.yaml
Proyecto/riscv_gpgpu/config/: arch_config.yaml
Proyecto/riscv_gpgpu/docs/architecture/: README.md  interfaces.md  isa.md
Proyecto/riscv_gpgpu/docs/reproducibility/: README.md
Proyecto/riscv_gpgpu/docs/traceability/: README.md  traceability_matrix.md
Proyecto/riscv_gpgpu/driver/: CMakeLists.txt
Proyecto/riscv_gpgpu/models/: CMakeLists.txt
Proyecto/riscv_gpgpu/models/systemc/: CMakeLists.txt  README.md
Proyecto/riscv_gpgpu/models/systemc/common/: logging.h  platform.h  types.h
Proyecto/riscv_gpgpu/models/systemc/compute_unit/: compute_unit.cpp  compute_unit.h
Proyecto/riscv_gpgpu/models/systemc/memory/: CMakeLists.txt  memory_hierarchy.h
Proyecto/riscv_gpgpu/models/systemc/scheduler/: CMakeLists.txt  warp_scheduler.h
Proyecto/riscv_gpgpu/models/systemc/simt_controller/: CMakeLists.txt  simt_controller.h
Proyecto/riscv_gpgpu/models/systemc/top/: CMakeLists.txt  main.cpp  top.h
Proyecto/riscv_gpgpu/runtime/: CMakeLists.txt
Proyecto/riscv_gpgpu/scripts/: run_systemc_sim.sh  setup-env.sh  verify.sh
Proyecto/riscv_gpgpu/scripts/scenarios/: baseline.sh  high_throughput.sh  power_efficient.sh
Proyecto/riscv_gpgpu/software/: CMakeLists.txt
Proyecto/riscv_gpgpu/software/common/: config.h
Proyecto/riscv_gpgpu/specs/001-open-riscv-gpgpu/: plan.md  spec.md  tasks.md
Proyecto/riscv_gpgpu/specs/001-open-riscv-gpgpu/checklists/: requirements.md
Proyecto/riscv_gpgpu/tests/: CMakeLists.txt
Proyecto/riscv_gpgpu/tests/systemc/: CMakeLists.txt  test_pipeline.cpp  test_scheduler.cpp
